--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="flex justify-between items-center px-48 max-md:px-10 max-md:w-[58rem] max-md:mt-5" >
       <div class="" id="logo">
-       <img src="../Img/Logo.png" alt="">
+       <img src="Img/Logo.png" alt="">
       </div>
       <div class="md:hidden">
         <!-- Hamburger Icon -->
@@ -29,30 +29,8 @@
           <li>
             <a href="#sectionflow">Flow it works</a>
           </li>
-          <li class="relative">
-            <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-gray-400 dark:hover:text-white dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent focus:outline-none">
-              Services
-              <i class='bx bx-chevron-down'></i>
-            </button>
-            <div id="dropdownNavbar" class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600 absolute top-full right-0 mt-1">
-              <ul class="py-2 text-sm text-gray-700 dark:text-gray-200 transition-all duration-300 " aria-labelledby="dropdownLargeButton">
-                <li>
-                  <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Washing</a>
-                </li>
-                <li>
-                  <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Ironing</a>
-                </li>
-                <li>
-                  <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Washing</a>
-                </li>
-                <li>
-                  <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Pickup</a>
-                </li>
-                <li>
-                  <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Delivery</a>
-                </li>
-              </ul>
-            </div>
+          <li>
+            <a href="#service">Services</a>
           </li>
           <li>
             <a href="#location">Location</a>
@@ -92,7 +70,7 @@
         <span class="mt-9 w-[28rem]" >Damai Loundry service will wash,dry,and fold your loundry a an affordable price. Pickup and drop-off options available</span>
         <a class="bg-primary w-80 h-14 rounded-full mt-14 font-bold text-xl flex items-center justify-center" href="">How it works</a>
       </div>
-        <img class="max-md:w-96" src="../Img/wash-machine.png" alt="">
+        <img class="max-md:w-96" src="Img/wash-machine.png" alt="">
     </section>
     <!-- section-Flow -->
     <section class=" bg-primary max-md:w-[58rem]" id="sectionflow">
@@ -104,28 +82,28 @@
             <div class="flex flex-col text-center p-5">
               <h1 class="font-medium">STEP 1</h1>
               <h2 class="text-2xl font-semibold max-md:text-lg">Pickup</h2>
-              <img src="../Img/pickup.png" alt="">
+              <img src="Img/pickup.png" alt="">
             </div>
           </div>
           <div class="w-56 h-80  mt-10 bg-secondarycolorwhite rounded-2xl shadow-xl max-md:w-40 max-md:h-56 ">
             <div class="flex flex-col text-center p-5">
               <h1 class="font-medium ">STEP 2</h1>
               <h2 class="text-2xl font-semibold max-md:text-lg">Wash & Dry</h2>
-              <img class="mt-14" src="../Img/wash.png" alt="">
+              <img class="mt-14" src="Img/wash.png" alt="">
             </div>
           </div>
           <div class="w-56  h-80  mt-10 bg-secondarycolorwhite  rounded-2xl shadow-xl max-md:w-40 max-md:h-56">
             <div class="flex flex-col text-center p-5">
               <h1 class="font-medium">STEP 3</h1>
               <h2 class="text-2xl font-semibold max-md:text-lg">Fold</h2>
-              <img class="mt-14"  src="../Img/faold.png" alt="">
+              <img class="mt-14"  src="Img/faold.png" alt="">
             </div>
           </div>
           <div class="w-56 h-80 mt-10 bg-secondarycolorwhite  rounded-2xl shadow-xl max-md:w-40 max-md:h-56">
             <div class="flex flex-col text-center p-5">
               <h1 class="font-medium">STEP 4</h1>
               <h2 class="text-2xl font-semibold max-md:text-lg">Delivery</h2>
-              <img class="mt-5"  src="../Img/delivery.png" alt="">
+              <img class="mt-5"  src="Img/delivery.png" alt="">
             </div>
           </div>
         </div>
@@ -139,7 +117,7 @@
         <div class="flex gap-20 mt-12  max-md:flex-col">
            <div class="group w-80 h-[31rem] bg-secondarycolorwhite shadow-sm rounded-3xl flex flex-col gap-5 p-7 hover:scale-110 hover:bg-primary hover:shadow-md transition-all duration-300  ">
             <div class="flex items-center">
-              <img src="../Img/icon-service-1.png" alt="">
+              <img src="Img/icon-service-1.png" alt="">
               <div class="flex-col">
                 <h1 class="text-2xl text-secondarycolorblue font-bold font-primary-bold">SINGLE SIZE</h1>
                 <span class="text-sm">Perfect for people who live alone</span>
@@ -160,7 +138,7 @@
            </div>
            <div class="group w-80 h-[31rem]  bg-secondarycolorwhite shadow-sm rounded-3xl flex flex-col gap-5 p-7 hover:scale-110 hover:bg-primary hover:shadow-md transition-all duration-300">
             <div class="flex items-center">
-              <img src="../Img/icon-service-2.png" alt="">
+              <img src="Img/icon-service-2.png" alt="">
               <div class="flex-col">
                 <h1 class="text-2xl text-secondarycolorblue font-bold font-primary-bold">COUPLES SIZE</h1>
                 <span class="text-sm">Perfect for couples size 3-6</span>
@@ -184,7 +162,7 @@
           </div>
           <div class="group w-80 h-[31rem] bg-secondarycolorwhite shadow-sm rounded-3xl flex flex-col gap-5 p-7 hover:scale-110 hover:bg-primary hover:shadow-md transition-all duration-300">
             <div class="flex items-center">
-              <img src="../Img/icon-service-3.png" alt="">
+              <img src="Img/icon-service-3.png" alt="">
               <div class="flex flex-col">
                 <h1 class="text-2xl text-secondarycolorblue font-bold font-primary-bold">FAMILY SIZE</h1>
                 <span class="text-sm">Perfect for famillies size 4-6</span>
@@ -217,7 +195,7 @@
                   <iframe class="rounded-lg" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15814.773032668358!2d109.0181535!3d-7.7160246!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6512be29e33995%3A0x5e0e58c88f6914d0!2sDamai%20Laundry!5e0!3m2!1sen!2sid!4v1706949394483!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   <div class= "flex flex-col justify-center items-center ml-10 max-md:ml-2 ">
                     <h1 class="text-3xl font-semibold text-center max-md:text-lg">Hard time deciding what's best for you? Find us on</h1>
-                    <a href="https://maps.app.goo.gl/xaqbTvNKN1nm3pnPA" class="bg-secondarycolorwhite w-44 h-12 rounded-full mt-16 font-bold text-xl flex items-center justify-center max-md:text-sm max-md:w-32 max-md:h-10">Learn More</a>
+                    <a href="https://maps.app.goo.gl/xaqbTvNKN1nm3pnPA" target="_blank" class="bg-secondarycolorwhite w-44 h-12 rounded-full mt-16 font-bold text-xl flex items-center justify-center max-md:text-sm max-md:w-32 max-md:h-10">Learn More</a>
                   </div>
               </div>
           </div>
@@ -226,7 +204,7 @@
       <footer class="bg-primary mt-72 max-md:w-[58rem] ">
         <div class="flex justify-end mr-56 gap-24 pt-16 pb-20 max-md:flex-col max-md:justify-center max-md:mr-0 max-md:items-center">
           <div class="flex justify-start mr-96 max-md:mr-0 max-md:justify-center">
-            <img src="../Img/footet-logo.png" alt="">
+            <img src="Img/footet-logo.png" alt="">
           </div>
           <div class="flex gap-24">
           <div class="flex flex-col font-semibold">
