--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@100&family=Poppins:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>Loundry page</title>
+    <title>Damai Loundry</title>
 </head>
 <body>
     <nav class="flex justify-between items-center px-48 max-md:px-10 max-md:w-[58rem] max-md:mt-5" >
