--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
         <!-- section-best -->
         <section class="m-24 max-md:w-[45rem]" id="location">
           <div class="flex items-center justify-center">
-              <div class=" max-md:w-screen bg-primary w-8/12 rounded-lg mt-24 ">
+              <div class="bg-primary w-8/12 rounded-lg mt-24 max-md:w-screen">
                 <div class="flex flex-row-reverse items-center">
                   <iframe class="rounded-lg" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15814.773032668358!2d109.0181535!3d-7.7160246!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6512be29e33995%3A0x5e0e58c88f6914d0!2sDamai%20Laundry!5e0!3m2!1sen!2sid!4v1706949394483!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   <div class= "flex flex-col justify-center items-center ml-10 max-md:ml-2 ">
@@ -204,7 +204,7 @@
          <!-- section-location -->
       <footer class="bg-primary mt-72 max-md:w-[58rem] ">
         <div class="flex justify-end mr-56 gap-24 pt-16 pb-20 max-md:flex-col max-md:justify-center max-md:mr-0 max-md:items-center">
-          <div class="max-md:hidden flex justify-start mr-96 max-md:mr-0 max-md:justify-center">
+          <div class="flex justify-start mr-96 max-md:mr-0 max-md:justify-center max-md:hidden">
             <img src="Img/footet-logo.png" alt="">
           </div>
           <div class="flex gap-24">
