--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
          <!-- section-location -->
       <footer class="bg-primary mt-72 max-md:w-[58rem] ">
         <div class="flex justify-end mr-56 gap-24 pt-16 pb-20 max-md:flex-col max-md:justify-center max-md:mr-0 max-md:items-center">
-          <div class="flex justify-start mr-96 max-md:mr-0 max-md:justify-center max-md:hidden">
+          <div class="flex justify-start mr-96 max-md:mr-0 max-md:justify-center max-sm:hidden">
             <img src="Img/footet-logo.png" alt="">
           </div>
           <div class="flex gap-24">
