--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Damai Loundry</title>
 </head>
 <body>
-    <nav class="flex justify-between items-center px-48 max-md:px-10 max-md:w-[58rem] max-md:mt-5" >
+    <nav class="flex justify-between items-center px-48 max-md:px-10 max-md:w-[58rem] max-md:mt-5 max-lg:w-[78rem] max-lg:px-20" >
       <div class="" id="logo">
        <img src="Img/Logo.png" alt="">
       </div>
@@ -64,7 +64,7 @@
     </div>
     
     <!-- section-home -->
-    <section class="flex justify-between items-center max-md:w-[58rem] max-md:pl-16" id="sectionhome">  
+    <section class="flex justify-between items-center max-md:w-[58rem] max-md:pl-16 max-lg:w-[78rem] " id="sectionhome">  
       <div class=" flex flex-col ml-40  w-1/3 max-md:ml-0 max-md:text-sm">
         <div class="bg-primary w-[21rem] h-10 rounded-full mb-10 font-bold text-m flex items-center pl-4" href="">20% Discount for 1 Month Subscription</div>
         <h1 class="text-6xl font-bold font-primary max-md:text-3xl">Laundry today or Naked tomorrow.</h1>
@@ -74,7 +74,7 @@
         <img class="max-md:w-96" src="Img/wash-machine.png" alt="">
     </section>
     <!-- section-Flow -->
-    <section class=" bg-primary max-md:w-[58rem]" id="sectionflow">
+    <section class=" bg-primary max-md:w-[58rem] max-lg:w-[78rem]" id="sectionflow">
       <div class="flex flex-col items-center py-8 ">
         <h1 class="font-bold text-xl font-primary text-secondarycolorblue pb-5" >HOW IT WORKS</h1>
         <h2 class="text-5xl font-semibold">Get it done in 4 steps</h2>
@@ -111,7 +111,7 @@
       </div>
     </section>
        <!-- section-Service -->
-    <section class="m-24 max-md:w-[44rem]" id="service">
+    <section class="m-24 max-md:w-[44rem]  max-lg:w-[65rem]" id="service">
       <div class="flex flex-col items-center gap-5">
         <h1 class="text-xl font-medium text-secondarycolorblue font-primary-medium">SERVICES</h1>
         <h2 class="text-5xl font-semibold">Services & Packages</h2>
@@ -189,7 +189,7 @@
     </div>
     </section>
         <!-- section-best -->
-        <section class="m-24 max-md:w-[45rem]" id="location">
+        <section class="m-24 max-md:w-[45rem] max-lg:w-[65rem]" id="location">
           <div class="flex items-center justify-center">
               <div class="bg-primary w-8/12 rounded-lg mt-24 max-md:w-full">
                 <div class="flex flex-row-reverse items-center">
@@ -202,12 +202,12 @@
           </div>
         </section>
          <!-- section-location -->
-      <footer class="bg-primary mt-72 max-md:w-[58rem] ">
-        <div class="flex justify-end mr-56 gap-24 pt-16 pb-20 max-md:flex-col max-md:justify-center max-md:mr-0 max-md:items-center">
-          <div class="flex justify-start mr-96 max-md:mr-0 max-md:justify-center max-md:hidden">
+      <footer class="bg-primary mt-72 max-md:w-[58rem] max-lg:w-[78rem] ">
+        <div class="flex justify-end mr-56 gap-24 pt-16 pb-20 max-md:flex-col max-md:justify-center max-md:mr-0 max-md:items-center max-lg:mr-0 max-lg:justify-center max-lg:items-center">
+          <div class="flex justify-start mr-96 max-md:mr-0 max-md:justify-center max-md:hidden max-lg:hidden">
             <img src="Img/footet-logo.png" alt="">
           </div>
-          <div class="flex gap-24">
+          <div class="flex gap-24 max-lg:gap-40">
           <div class="flex flex-col font-semibold">
             <h1 class="font-bold">About Us</h1>
             <div class="flex flex-col gap-2 mt-5">
