--- a/src/index.html
+++ b/src/index.html
@@ -90,14 +90,14 @@
             <div class="flex flex-col text-center p-5">
               <h1 class="font-medium ">STEP 2</h1>
               <h2 class="text-2xl font-semibold max-md:text-lg">Wash & Dry</h2>
-              <img class="mt-14" src="Img/wash.png" alt="">
+              <img class="mt-14 max-md:mt-9" src="Img/wash.png" alt="">
             </div>
           </div>
           <div class="w-56  h-80  mt-10 bg-secondarycolorwhite  rounded-2xl shadow-xl max-md:w-40 max-md:h-56">
             <div class="flex flex-col text-center p-5">
               <h1 class="font-medium">STEP 3</h1>
               <h2 class="text-2xl font-semibold max-md:text-lg">Fold</h2>
-              <img class="mt-14"  src="Img/faold.png" alt="">
+              <img class="mt-14 max-md:mt-9"  src="Img/faold.png" alt="">
             </div>
           </div>
           <div class="w-56 h-80 mt-10 bg-secondarycolorwhite  rounded-2xl shadow-xl max-md:w-40 max-md:h-56">
